--- a/dickens.html
+++ b/dickens.html
@@ -7,8 +7,10 @@
   <style>
       .main
     {
+        width:600;
         display:block;
         margin:auto;
+        text-align:center;
     }
   </style>
 </head>
