Changed style - added video class

--- a/dickens.html
+++ b/dickens.html
@@ -5,17 +5,28 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <title>What the Dickens!</title>
   <style>
-      .main
+	body
+	{
+		background:black;
+	}
+    .main
     {
         width:600;
         display:block;
         margin:auto;
         text-align:center;
     }
+
+    .video
+	    {
+	    width=560px;
+	    height=315px;
+    }
+
   </style>
 </head>
 <body>
   <div class="main">
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/x02D569rtR8" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <iframe class"video" width="560" height="315" src="https://www.youtube.com/embed/x02D569rtR8" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
   </div>
 </body>
