Update and rename dickens.html to dickens/index.html

--- a/dickens/index.html
+++ b/dickens/index.html
@@ -11,7 +11,8 @@
 	}
     .main
     {
-        width:600;
+       padding-top:100px;
+ width:600;
         display:block;
         margin:auto;
         text-align:center;
