--- a/dickens/index.html
+++ b/dickens/index.html
@@ -20,9 +20,23 @@
 
     .video
 	    {
-	    width=560px;
-	    height=315px;
-    }
+
+    position: relative;
+    padding-bottom: 56.25%;
+    padding-top: 35px;
+    height: 0;
+    overflow: hidden;
+ }
+
+
+.video iframe {
+    position: absolute;
+    top:0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
+
 
   </style>
 </head>
