--- a/dickens/index.html
+++ b/dickens/index.html
@@ -42,6 +42,9 @@
 </head>
 <body>
   <div class="main">
-    <iframe class"video" width="560" height="315" src="https://www.youtube.com/embed/x02D569rtR8" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-  </div>
+<h2>What The Dickens?</h2>
+<p>(A one-man improvised Christmas Ghost Story)</p>
+<div class="video">
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/x02D569rtR8" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+  </div></div>
 </body>
