--- a/dickens/index.html
+++ b/dickens/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <title>What the Dickens!</title>
   <style>
-	body
+	body, p, h2
 	{
 		background:black;
 color:white;
