--- a/dickens/index.html
+++ b/dickens/index.html
@@ -12,7 +12,7 @@ color:white;
 	}
     .main
     {
-       padding-top:100px;
+       padding-top:5%;
  width:600;
         display:block;
         margin:auto;
