Tidied up screen elements

--- a/dickens/index.html
+++ b/dickens/index.html
@@ -8,12 +8,14 @@
 	body, p, h2
 	{
 		background:black;
-color:white;
+		color:white;
+		font-family:"Georgia", serif;
+		margin:0px;
 	}
     .main
     {
-       padding-top:5%;
- width:600;
+       padding-top:1%;
+ 	width:600;
         display:block;
         margin:auto;
         text-align:center;
