--- a/dickens/index.html
+++ b/dickens/index.html
@@ -8,8 +8,9 @@
 	body, p, h2
 	{
 		background:black;
-		color:white;
+		color:black;
 		font-family:"Georgia", serif;
+    text-shadow: 2px 4px 8px #cccccc, -2px -4px 8px #eeeeee;
 		margin:0px;
 	}
     .main
