--- a/index.html
+++ b/index.html
@@ -3,12 +3,29 @@
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>jaysencryer.com</title>
-
+        
         <link rel="stylesheet" href="styles.css">
+        
     </head>
     <body>
-        <div class="expand-div construction">
-            <p>This site under construction<span class="collapse-button">-</span></p>
+        <div>
+            <div class="expand-div construction">
+                <div class="ed-head construction-head">
+                    <p>This site under construction<span class="collapse-button">+</span></p>
+                </div>
+                <div class="construction-body hidden"></div>
+            </div>
         </div>
+        <div class="expand-div expanded red">
+            <div class="ed-head red">
+                <p>This is a different part<span class="collapse-button">-</span></p>
+            </div>
+
+        </div>
+        <div class="expand-div" style="background:blue">
+            <p>Yet another<span class="collapse-button">expander toggle</span></p>
+        </div>
+        <script src="jccom.js"></script>
     </body>
+
 </html>
