adaptable chapter menu for mobile, and wording change to chapters

--- a/dickens/index.html
+++ b/dickens/index.html
@@ -14,7 +14,7 @@
     <div class="chap_nav">
       
       <p><span class="snowflake" data-timecode="">*</span>
-      <p class="undertext">menu</p>
+      <p class="undertext">chapters</p>
       <div class="menu">
         <p><span class="menu_option" data-timecode="38">Introduction</span></p>
         <p><span class="menu_option" daya-timecode="163">"I require a suggestion"</span></p>
