updated menu functionality and mobile support

--- a/dickens/index.html
+++ b/dickens/index.html
@@ -35,10 +35,13 @@
         <p><span class="menu_option" data-timecode="3362">"What say you, Tiny Tim?"</span></p>
         <p><span class="menu_option" data-timecode="3405">Curtain Call</span></p>
       </div>
+      <div class="mobile_message">
+        <p>Autoplay may not work on mobile.<br>Press play to continue from selected chapter, or switch to desktop view</p>
+      </div>
     </div>
     
     <div class="video">
-      <iframe id="youtvid" width="560" height="315" src="https://www.youtube.com/embed/x02D569rtR8" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      <iframe id="youtvid" width="560" height="315" src="https://www.youtube.com/embed/x02D569rtR8?rel=0&modestbranding=1" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </div>
   
   </div>
