--- a/career-day/pb-j-k1.html
+++ b/career-day/pb-j-k1.html
@@ -22,10 +22,12 @@
     <button onclick=spreadPB()>Spread Peanut Butter</button>
     <button onclick=openJellyJar()>Open Jelly Jar</button>
     <button onclick=spreadJelly()>Spread Jelly</button>
+    <button onclick=putSlicesTogether()>Put the Slices Together</button>
 
-    <p id="bread-bag">Closed Bread Bag</p>
-    <p id="pb-jar">Closed Peanut Butter Jar</p>
-    <p id="jelly-jar">Closed Jelly Jar</p>
-    <p id="bread-slice1" hidden>Slice 1</p>
-    <p id="bread-slice2" hidden>Slice 2</p>
+    <div><image src="./images/bread_closed.png" alt="Closed Bread Bag" width="180" height="86" id="bread-bag"></image></div>
+    <div><image src="./images/pb_closed.png" alt="Closed Peanut Butter Jar" width="88" height="108" id="pb-jar"></image></div>
+    <div><image src="./images/jelly_closed.png" alt="Closed Jelly Jar" width="88" height="108"  id="jelly-jar"></image></div></div>
+    <div id="bread-slice1" hidden=>Slice 1</div>
+    <div id="bread-slice2" hidden>Slice 2</div>
+    <div id="pb-j-sandwich" hidden>PB & J Sandwich</div>
 </body>
