updated presentation and game

--- a/career-day/index.html
+++ b/career-day/index.html
@@ -1,34 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta http-equiv="X-UA-Compatible" content="ie=edge">
-        <script type="text/javascript" src="guessTheNumber.js"></script>
-        <link rel="stylesheet" href="style.css">
-        <title>Betty Wheeler Career Day - Software Engineer</title>
-    </head>
-    <body>
-        <!-- <h1>Guess the Number</h1>
+
+<head>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <script type="text/javascript" src="guessTheNumber.js"></script>
+    <link rel="stylesheet" href="style.css">
+    <title>Betty Wheeler Career Day - Software Engineer</title>
+</head>
+
+<body>
+    <!-- <h1>Guess the Number</h1>
         <form onsubmit=processGuess(event)>
 
             <input type=number id="guess">
         </form> -->
-        <div>
-            <a href="./engineer.html">
-                <button>What is a Software Engineer?</button>
-            </a>
-            <a href="./software.html">
-                <button>What is a Software?</button>
-            </a>
-            <a href="./how-its-made.html">
+    <div id="presentation">
+        <h2>What is a Software Engineer?</h2>
+        <h2>What is a Software?</h2>
+        <h2>How is Software made?</h2>
+        <a href="./pbj.html">
 
-                <button>How is Software made?</button>
-            </a>
-            <a href="./algorithms.html">
+            <h2>Algorithms</h2>
+        </a>
+    </div>
+</body>
 
-                <button>Algorithms</button>
-            </a>
-        </div>
-    </body>
 </html>
