--- a/career-day/index.html
+++ b/career-day/index.html
@@ -5,7 +5,6 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <script type="text/javascript" src="guessTheNumber.js"></script>
     <link rel="stylesheet" href="style.css">
     <title>Betty Wheeler Career Day - Software Engineer</title>
 </head>
@@ -18,7 +17,7 @@
         </form> -->
     <div id="presentation">
         <h2>What is a Software Engineer?</h2>
-        <h2>What is a Software?</h2>
+        <h2>What is Software?</h2>
         <h2>How is Software made?</h2>
         <a href="./pbj.html">
 
